<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bookmark_series"
        android:icon="@drawable/ic_bookmark_white"
        android:title="@string/bookmark"
        app:showAsAction="always"/>

    <group android:id="@+id/sorting_series"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_asc_series"
            android:checked="false"
            android:title="@string/sort_a_z"/>
        <item
            android:id="@+id/action_desc_series"
            android:checked="false"
            android:title="@string/sort_z_a"/>
        <item
            android:id="@+id/action_default_series"
            android:checked="true"
            android:title="@string/sort_default"/>
    </group>

</menu>